--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
 		"deploy": "gh-pages -d build"
 	},
 	"dependencies": {
+		"@hookform/resolvers": "^4.1.2",
 		"react": "^19.0.0",
-		"react-dom": "^19.0.0"
+		"react-dom": "^19.0.0",
+		"react-hook-form": "^7.54.2",
+		"yup": "^1.6.1"
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.19.0",
